--- a/index.html
+++ b/index.html
@@ -54,6 +54,37 @@
           <h1>Bootstrap starter template</h1>
           <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
         </div>
+
+        <div class="row">
+          <div class="block-soc bg-twitch-purple text-white m-2 col">
+            <img src="/assets/images/twitch.svg" class="opacity-2"/>
+            <div class="ps-3 pb-1">
+              <h5>Twitch</h5>
+              <p>1.5k followers</p>
+            </div>
+          </div>
+          <div class="block-soc bg-yt-red text-white m-2 col">
+            <img src="/assets/images/youtube.svg" class="opacity-4"/>
+            <div class="ps-3 pb-1">
+              <h5>Youtube</h5>
+              <p>1.5k subscribers</p>
+            </div>
+          </div>
+          <div class="block-soc bg-twitter-blue text-white m-2 col">
+            <img src="/assets/images/twitter.svg" class="opacity-4"/>
+            <div class="ps-3 pb-1">
+              <h5>Twitter</h5>
+              <p>1.5k followers</p>
+            </div>
+          </div>
+          <div class="block-soc bg-insta-pink text-white m-2 col">
+            <img src="/assets/images/instagram.svg" class="opacity-4"/>
+            <div class="ps-3 pb-1">
+              <h5>Instagram</h5>
+              <p>1.5k followers</p>
+            </div>
+          </div>
+        </div>
       </main><!-- /.container -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
