--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="https://youtube.com/c/kelpsey" target="_blank"><i class="bi bi-youtube"></i></a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" target="_blank"><i class="bi bi-discord"></i></a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
                 <ul class="dropdown-menu" aria-labelledby="dropdown01">
