add url to discord link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a class="nav-link" href="https://youtube.com/c/kelpsey" target="_blank"><i class="bi bi-youtube"></i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" target="_blank"><i class="bi bi-discord"></i></a>
+                <a class="nav-link" href="https://discord.gg/kelpsey" target="_blank"><i class="bi bi-discord"></i></a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
